tests/lean/run/issue7550.lean
namespace Bug

open Nat

theorem div_rec_lemma {x y : Nat} : 0 < y ‚ąß y ‚Č§ x ‚Üí x - y < x :=
  fun ‚ü®ypos, ylex‚ü© => sub_lt (Nat.lt_of_lt_of_le ypos ylex) ypos

protected noncomputable def divCore (x y : Nat) (fuel : Nat) (hfuel : x < fuel): Nat :=
  match fuel with
  | 0 => by contradiction
  | succ fuel =>
    if h : 0 < y ‚ąß y ‚Č§ x then
      have this := div_rec_lemma h
      Bug.divCore (x - y) y fuel (Nat.lt_of_lt_of_le (div_rec_lemma h) (Nat.le_of_lt_succ hfuel)) + 1
    else
      0
termination_by structural fuel

-- /--
-- info: { funIndName := `Bug.divCore.induct,
--   levelMask := #[],
--   params := #[Lean.Meta.FunIndParamKind.target, Lean.Meta.FunIndParamKind.param, Lean.Meta.FunIndParamKind.target,
--               Lean.Meta.FunIndParamKind.target] }
-- -/
-- #guard_msgs in
-- run_meta
--   let some x ‚Üź Lean.Meta.getFunIndInfo? false ``Bug.divCore | return
--   Lean.logInfo m!"{repr x}"

-- TODO(kmill) `this‚úĚ : x‚úĚ - y < x‚úĚ` hypothesis no longer present
/--
error: tactic 'fail' failed
case case1
x y fuel x‚úĚ fuel‚úĚ : Nat
hfuel‚úĚ : x‚úĚ < fuel‚úĚ.succ
h‚úĚ : 0 < y ‚ąß y ‚Č§ x‚úĚ
ih1‚úĚ : Bug.divCore (x‚úĚ - y) y fuel‚úĚ ‚čĮ = 42
‚äĘ Bug.divCore (x‚úĚ - y) y fuel‚úĚ ‚čĮ + 1 = 42

case case2
x y fuel x‚úĚ fuel‚úĚ : Nat
hfuel‚úĚ : x‚úĚ < fuel‚úĚ.succ
h‚úĚ : ¬¨(0 < y ‚ąß y ‚Č§ x‚úĚ)
‚äĘ 0 = 42
-/
#guard_msgs(error) in
protected theorem divCore_eq_div : Bug.divCore x y fuel h = 42 := by
  fun_induction Bug.divCore
  fail

-- TODO(kmill) `this‚úĚ : x‚úĚ - y < x‚úĚ` hypotheses no longer present
/--
error: tactic 'fail' failed
case case1
x y fuel x‚úĚ fuel‚úĚ : Nat
hfuel‚úĚ : x‚úĚ < fuel‚úĚ.succ
h‚úĚ : 0 < y ‚ąß y ‚Č§ x‚úĚ
ih1‚úĚ : Bug.divCore (x‚úĚ - y) y fuel‚úĚ ‚čĮ = 42
‚äĘ Bug.divCore (x‚úĚ - y) y fuel‚úĚ ‚čĮ + 1 = 42

case case2
x y fuel x‚úĚ fuel‚úĚ : Nat
hfuel‚úĚ : x‚úĚ < fuel‚úĚ.succ
h‚úĚ : ¬¨(0 < y ‚ąß y ‚Č§ x‚úĚ)
‚äĘ 0 = 42
-/
#guard_msgs in
protected theorem divCore_eq_div' : Bug.divCore x y fuel h = 42 := by
  induction x, fuel, h using Bug.divCore.induct_unfolding y
  fail

end Bug
